implementation of the gang scheduling KEP
